# Responsive_Controller

./: .gitignore  CMakeLists.txt  README.md  install.sh
network/: CMakeLists.txt  env.py  monitor.py  network.py  ppo.py  report.txt
render/: CMakeLists.txt  DART_interface.cpp  DART_interface.h  GLUTWindow.cpp  GLfunctions.cpp  MainInterface.cpp  MainInterface.h  ReactionTestInterface.cpp  ReactionTestInterface.h  TestInterface.cpp  TestInterface.h  main.cpp
sim/: CollisionTest.cpp  CollisionTest.h  Controller.cpp  Controller.h  ReactiveController.cpp  ReactiveController.h  ResponsiveController.cpp  ResponsiveController.h
sim/constraints/: CMakeLists.txt  HumanArmJointLimitConstraint.cpp  HumanArmJointLimitConstraint.hpp  HumanLegJointLimitConstraint.cpp  HumanLegJointLimitConstraint.hpp  humanJointLimits.cpp
utils/: tensorflow_rename_variables.py
